2005-11-03	Richard van den Berg  <richard@vdberg.org>
	* Remove russian translations; they are out of date and there is no static version of gettext available
	* Do not stop parsing directory at unescaped .
	* Fix "make dist" and "make check"
	* Released version 0.11-rc2

2005-10-30	Richard van den Berg  <richard@vdberg.org>
	* Warn if 'I' and 'c' are used together

2005-10-28	Richard van den Berg  <richard@vdberg.org>
	* Ignore 'c' when 'I' is in effect
	* Mention in aide.conf.5 that 'c' and 'I' are incompatible

2005-10-26	Richard van den Berg  <richard@vdberg.org>
	* Check for ino64_t and dirent64 separately since HPUX does not have them

2005-10-25	Richard van den Berg  <richard@vdberg.org>
	* Print start and stop timestamp together (Marc Haber <mh+aide@zugschlus.de>)
	* Print database_out path with -i and -u
	* Added bzip2.sh to the contrib directory

2005-10-19	Richard van den Berg  <richard@vdberg.org>
	* Applied patch from Debian bug #121717: aide spelling fixes

2005-10-16	Richard van den Berg  <richard@vdberg.org>
	* Applied patch 1124758: fix underquoted m4
	* Applied patch 1124757: dist-hook missing file snprintf.h
	* Applied patch 1124760: cleaner automake initialisation
	* Applied patch 1124782: gettextize related patch

2005-10-07	Richard van den Berg  <richard@vdberg.org>
	* If open() with NO_ATIME fails, try open() again without it

2005-10-05	Richard van den Berg  <richard@vdberg.org>
	* Compile aide as a static executable
	* Fixed some spelling errors caught by Marc Haber <mh+aide@zugschlus.de>
	* Changed version to Post 0.11-rc1
	* Ignore special characters after backslash in directory names (bug #1162575)

2005-10-04	Richard van den Berg  <richard@vdberg.org>
	* Released aide 0.11-rc1

2005-09-14	Richard van den Berg  <richard@vdberg.org>
	* Print detailed error message when mmap() returns MAP_FAILED

2005-09-02	Richard van den Berg  <richard@vdberg.org>
	* Added patch for cygwin compatibility as per bug #1279818
