@@ -1,7 +1,7 @@
 
 dnl Initialize autoconf/automake
 AC_INIT(src/aide.c)
-AM_INIT_AUTOMAKE(aide, "0.11-rc2")
+AM_INIT_AUTOMAKE(aide, "post-0.11-rc2")
 
 dnl The name of the configure h-file.
 AM_CONFIG_HEADER(config.h)
