@@ -2,7 +2,9 @@
 	* Remove russian translations; they are out of date and there is no static version of gettext available
 	* Do not stop parsing directory at unescaped .
 	* Fix "make dist" and "make check"
+	* Added gpg scripts to contrib
 	* Released version 0.11-rc2
+	* Changed version to post-0.11-rc2
 
 2005-10-30	Richard van den Berg  <richard@vdberg.org>
 	* Warn if 'I' and 'c' are used together
